--- a/sass/responsive/_tablet.scss
+++ b/sass/responsive/_tablet.scss
@@ -85,5 +85,10 @@
   .payment_methods {
     margin-bottom: 1.5rem;
   }
+  .booking_info {
+    .booking_details {
+      margin-bottom: 2rem;
+    }
+  }
 }
 /* ======= Tablet ======= */
