--- a/sass/responsive/_tablet.scss
+++ b/sass/responsive/_tablet.scss
@@ -90,5 +90,16 @@
       margin-bottom: 2rem;
     }
   }
+  .doctor {
+    .pick_title {
+      margin-top: 1.5rem;
+    }
+  }
+  .other_doctor {
+    .card_doctor {
+      width: 47%;
+      margin-bottom: 1.5rem;
+    }
+  }
 }
 /* ======= Tablet ======= */
