--- a/sass/responsive/_mobile.scss
+++ b/sass/responsive/_mobile.scss
@@ -194,7 +194,7 @@
       }
     }
   }
-  .other_doctor {
+  .other_doctor, .other_doctor_service {
     .card_doctor {
       width: 90%;
       margin: 0 5%;
@@ -204,6 +204,12 @@
         height: 250px;
       }
     }
+  }
+  .service_header .info ul li{
+    padding-inline-start: 8%;
+  }
+  .service_header img {
+    height: 250px;
   }
 }
 /* ======= Mobile ======= */
